[project]
name = "hng-stage-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpathlib==0.16.0",
    "en-core-web-sm",
    "fastapi>=0.119.1",
    "numpy==1.26.4",
    "pydantic>=2.12.3",
    "smart-open==6.4.0",
    "spacy==3.7.4",
    "sqlmodel>=0.0.27",
    "thinc==8.2.2",
    "typer==0.9.4",
    "uvicorn>=0.38.0",
    "weasel==0.3.4",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz" }
